# RepositoryManager

./: CHANGELOG.md  LICENSE  README.md  fix_warnings.sh  index.html  note  package.json  pnpm-lock.yaml  strip-comments.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: actions.rs  actions_gh.rs  analytics.rs  auth.rs  branches.rs  collaborators.rs  dependabot.rs  deps_scanner.rs  environments.rs  files.rs  issues.rs  logs.rs  mod.rs  orgs.rs  prs.rs  queue.rs  releases.rs  repos.rs  shell.rs  upload.rs  webhooks.rs
src-tauri/src/github/: actions.rs  branches.rs  collaborators.rs  dependabot.rs  deps_scanner.rs  environments.rs  issues.rs  mod.rs  orgs.rs  prs.rs  releases.rs  webhooks.rs
src-tauri/src/health/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/queue_engine/: mod.rs
src/components/command-palette/: CommandPalette.tsx
src/components/confirmation/: ConfirmationModal.tsx
src/components/glass/: GlassBadge.tsx  GlassInput.tsx  (+5 more)
src/hooks/: useContextSwitch.ts  useGlobalContextRefresh.ts  useKeyboard.ts  useQueue.ts  useSessionSync.ts  useTauriEvent.ts
src/lib/: formatError.ts
src/stores/: accountStore.ts  filterPresetsStore.ts  notificationStore.ts  orgStore.ts  queueStore.ts  repoStore.ts  selectionStore.ts  settingsStore.ts  uiStore.ts
src/styles/: animations.css  design-tokens.css  glass.css  globals.css  typography.css
src/types/: analytics.ts  github.ts  governance.ts  queue.ts  repo.ts
(+62 files in other folders)
