[package]
name = "zrepomanager"
version = "0.2.0"
description = "ZRepoManager — GitHub Repository Lifecycle Manager"
authors = ["ZRepoManager"]
edition = "2021"

[lib]
name = "zrepomanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
once_cell = "1"
